--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,23 @@ body {
 
 }
 
-
 .heading__image {
   width: 100px;
   height: 50px;
   margin-right: 10px;
+}
+
+.main__container {
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.main__container span {
+  font-size: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+  .main__container span {
+    font-size: 25px;
+  }
 }
