--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ body {
   font-size: 40px;
 }
 
+.content__container {
+  margin-top: 20px;
+}
+
 @media only screen and (max-width: 600px) {
   .main__container span {
     font-size: 25px;
